# FFX-Trainer

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  resources.rc
src/: constants.h  main.c  maths.h  memory-constants.h  memory.h  process.h  types.h  window.h
src/assets/icons/: icon.png.h
